<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTracks</string>
    <string name="login">登录</string>
	<string name="login_input_inavailable">用户名和密码不能为空！</string>
	<string name="login_username">账户</string>
	<string name="login_pwd">密码</string>
	<string name="login_logining">正在登录...</string>
	<string name="login_success">登录成功！</string>
	<string name="login_failed">登录失败！</string>
	<string name="login_failed_user_or_pwd_error">用户名或密码错误！</string>
	<string name="tip_no_network">无网络连接，请检查网络！</string>
	<string name="tip_client_failure">连接异常，请稍后再试！</string>
    <string name="tip_failed_timeout">连接服务器超时，请稍后再试！</string>
    
    <string name="mapview_gps">地图控件上的GPS定位按钮</string>
	<string name="mapview_zoomout">缩小地图</string>
	<string name="mapview_zoomin">放大地图</string>
	<string name="mapview_fullscreen">全幅显示地图</string>
	
	<string name="confirm">确认</string>
	<string name="cancle">取消</string>
	<string name="iknow">知道了</string>
	<string name="setnet">设置网络</string>
	
	<string name="map_share_to">分享到</string>
	<string name="map_share_sina">新浪微博</string>
	<string name="map_share_sina_weixin">微信好友</string>
	<string name="map_share_sina_weixincircle">朋友圈</string>
	<string name="map_share_sina_qzone">QQ空间</string>
	<string name="map_share_wait">地图尚未加载,请稍等...</string>
    <string name="map_share_sharing">正在分享...</string>
    <string name="map_share_cancle">取消分享</string>
    <string name="map_share_no_auth">没有授权</string>
    <string name="map_share_start">开始分享</string>
    <string name="map_share_success">分享成功</string>
    <string name="map_share_failed">分享失败</string>
    <string name="map_share_failed_error_code">错误代码：</string>
    <string name="map_share_auth_start">授权开始</string>
    <string name="map_share_auth_error">授权失败</string>
    <string name="map_share_auth_complete">授权成功</string>
    <string name="map_share_auth_cancle">取消授权</string>
</resources>
