<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_blue_dark"
    android:orientation="vertical" >
        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_48"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_size_19" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_launcher" />


    <LinearLayout
        style="@style/lv_login_item"
        android:layout_marginTop="@dimen/space_15" >

        <LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:background="@drawable/shape_login_edit"
			>
        <EditText
            android:id="@+id/edt_login_username"
            style="@style/edt_login_item"
            android:layout_weight="1"
            android:drawableLeft="@drawable/icon_login_username"
            android:hint="@string/login_username"
            android:background="@drawable/shape_login_edit"
            android:text=""
            android:textColorHint="@color/login_text_hint"
            />
        <ImageView
		    android:id="@+id/lv_login_clear"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_marginRight="@dimen/space_5"
		    android:background="@drawable/btn_search_clean" 
		    android:visibility="gone"
		    />	
         </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        style="@style/lv_login_item"
        android:layout_marginTop="@dimen/space_15" >

        <EditText
            android:id="@+id/edt_login_pwd"
            style="@style/edt_login_item"
            android:drawableLeft="@drawable/icon_login_pwd"
            android:hint="@string/login_pwd"
            android:password="true"
            android:text=""
            android:textColorHint="@color/login_text_hint"
            android:background="@drawable/shape_login_edit" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_38"
        android:layout_marginLeft="@dimen/space_50"
        android:layout_marginRight="@dimen/space_50"
        android:layout_marginTop="@dimen/space_15"
        android:background="@drawable/btn_login_selector"
        android:text="@string/login"
        android:textColor="@color/white" />
</LinearLayout>